first commit everything is messup xD

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
+  "name": "my-level",
   "version": "0.0.1",
-  "description": "chrome extension boilerplate",
+  "description": "A simple way to know your software seniority level",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/Trycatch-tv/my-level.git"
   },
   "scripts": {
     "build": "tsc --noEmit && vite build",
