--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "type": "module",
   "dependencies": {
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -32,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "5.56.0",
     "@typescript-eslint/parser": "5.38.1",
     "@vitejs/plugin-react": "2.2.0",
+    "autoprefixer": "^10.4.14",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "eslint": "8.36.0",
@@ -42,9 +45,12 @@
     "jest": "29.0.3",
     "jest-environment-jsdom": "29.5.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
+    "postcss-cli": "^10.1.0",
     "prettier": "2.8.8",
     "rollup": "2.79.1",
     "sass": "1.55.0",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "29.0.2",
     "ts-loader": "9.4.2",
     "typescript": "4.8.3",
