--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": false,
   "trailingComma": "es5",
   "arrowParens": "always",
-  "semi": false
+  "semi": false,
+  "endOfLine": "lf"
 }
